[package]
name = "metroid-demo"
version = "1.2.1"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
build = "build.rs"
description = "OpenGL tech demo."

[dependencies]
glfw = "0.25.0"
stb_image = "0.2.2"
log = "0.4.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
file_logger = { git = "https://github.com/stallmanifold/file-logger" }
lean_cgmath = { git = "https://github.com/stallmanifold/lean-cgmath" }
wavefront_obj = { git = "https://github.com/stallmanifold/wavefront-obj" }

[build-dependencies]
gl_generator = "0.10.0"

[profile.dev]
debug = true

[features]
build_for_install = []
