[package]
name = "metroid-demo"
version = "1.2.2"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
build = "build.rs"
description = "OpenGL tech demo."

[dependencies]
glfw = "0.25.0"
stb_image = "0.2.2"
log = "0.4.6"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
lean_cgmath = { git = "https://github.com/lambdaxymox/lean-cgmath" }
wavefront_obj = { git = "https://github.com/lambdaxymox/wavefront-obj" }

[build-dependencies]
gl_generator = "0.10.0"

[profile.dev]
debug = true

[features]
build_for_install = []
